Version 4.9 - Fixed Price formatting and card spacing issues.-

--- a/style/style.scss
+++ b/style/style.scss
@@ -110,6 +110,10 @@ body {
                 }
             }
         }
+        .price {
+            font-size: clamp(1rem, 2vw, 1.5rem);
+            margin: 10px auto 10px;
+        }
     }
     div {
         width: 90%;
